# aqua

./: .coveragerc  .gitignore  .pylintrc  README.md  format.sh  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg
aqua/: __init__.py  main.py
aqua/market_data/: __init__.py  _market_data.py  alpaca.py  errors.py  polygon.py
aqua/security/: __init__.py  stock.py
src/aqua/broker/: __init__.py  broker_interface.py  ibkr.py
src/aqua/engine/: __init__.py  engine.py
src/aqua/interface/: __init__.py  commands.py  interface.py  messages.py  parser.py  parser_json.py  parser_plaintext.py
src/aqua/internal/: deprecated.py  ibkr.py  ref_counter.py
src/aqua/market_data/: __init__.py  aggregate.py  alpaca.py  alpaca_stream.py  errors.py  ibkr.py  ibkr_stream.py  market_data.py  market_data_interface.py  polygon.py
src/aqua/portfolio/: __init__.py  portfolio.py  strategy.py
src/aqua/security/: __init__.py  option.py  security.py  stock.py
src/aqua/server/: __init__.py  webserver.py
src/market_data/: market_data.py
src/security/: stock.py
tests/: test_alpaca.py  test_ibkr.py  test_ibkr_broker.py  test_ibkr_market_data.py  test_polygon.py  test_polygon_market_data.py  test_portfolio.py  test_stock.py  test_strategy.py
tests/integration/broker/: test_broker.py
tests/integration/engine/: test_engine.py
tests/integration/market_data/: test_agg_market_data.py  test_market_data.py
tests/unit/interface/: test_interface.py  test_message_type.py  test_plaintext_parser.py
tests/unit/internal/: test_ref_counter.py
tests/unit/security/: test_option.py
(+8 files in other folders)
