[metadata]
name = aqua
version = 0.0.1
author = Yuhan Liu
author_email = yliu1021@outlook.com
description = A quantitative trading framework

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    websockets==9.1
    aiohttp==3.7.4.post0
    ibapi==9.81.1.post1
    pandas==1.3.2
    python-dotenv==0.19.0

[options.packages.find]
where = src
